force-app/main/default/objects/Animal__c/fields/Animal_Number__c.field-meta.xml
<CustomField>
    <fullName>Animal_Number__c</fullName>
    <displayFormat>AN-{0000}</displayFormat>
    <label>Animal Number</label>
    <type>AutoNumber</type>
</CustomField>