force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <inlineHelpText>If you&apos;re unsure of the breed just leave blank. We can always find out later!</inlineHelpText>
    <label>Breed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>