force-app/main/default/objects/Animal__c/fields/Neutered__c.field-meta.xml
<CustomField>
    <fullName>Neutered__c</fullName>
    <inlineHelpText>Has the animal been spayed (female) or castrated (male?)</inlineHelpText>
    <label>Neutered</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>