force-app/main/default/objects/Animal__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <inlineHelpText>What is the sex of the animal? Certain animals (reptiles, birds etc.) are hard to tell so use unknown if you&apos;re unsure.</inlineHelpText>
    <label>Sex</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>