force-app/main/default/objects/Animal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Was the animal rescued or surrendered to us?</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rescue</fullName>
            </value>
            <value>
                <fullName>Surrender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>