force-app/main/default/objects/Animal__c/fields/Type_of_Animal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Animal__c</fullName>
    <label>Type of Animal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Other (rabbit, bird, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>